--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <h2>姓名:呂喬詠</h2>
         <h2>生日:2005/01/18</h2>
         <h2>星座:摩羯座</h2>
-        <h2><a href="https://www.facebook.com/esther.lu.3958/">FB:Estherlu</a></h2>
-        <h2><a href="https://www.instagram.com/esther.lu.3958/">IG:Estherlu</a></h2>
+        <h2><a href="https://www.facebook.com/esther.lu.3958?mibextid=ZbWKwL">FB:Estherlu</a></h2>
+        <h2><a href="https://www.instagram.com/esther.lu.3958?igsh=bTNvempqd2U5d2R3">IG:Estherlu</a></h2>
         <h2>LINE:Estherlu</h2>
         <h2>電話:0966-281-129</h2>
         <h2><a href="https://www.aeust.edu.tw/">學校:亞東科技大學</a></h2>
